cow and food fixed

--- a/app/src/main/res/layout/activity_cow_add.xml
+++ b/app/src/main/res/layout/activity_cow_add.xml
@@ -62,11 +62,11 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="@string/weight_change_text"
+                android:text="@string/milk_days_text"
                 android:textSize="20sp" />
 
             <EditText
-                android:id="@+id/et_weight_change"
+                android:id="@+id/et_milk_days"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
@@ -109,48 +109,6 @@
 
             <EditText
                 android:id="@+id/et_milk_fat"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/milk_protein_text"
-                android:textSize="20sp" />
-
-            <EditText
-                android:id="@+id/et_milk_protein"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/lactation_weeks_text"
-                android:textSize="20sp" />
-
-            <EditText
-                android:id="@+id/et_lactation_weeks"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
