--- a/app/src/main/res/layout/activity_cow_info.xml
+++ b/app/src/main/res/layout/activity_cow_info.xml
@@ -66,11 +66,11 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="@string/weight_change_text"
+                android:text="@string/milk_days_text"
                 android:textSize="20sp" />
 
             <TextView
-                android:id="@+id/tv_weight_change"
+                android:id="@+id/tv_milk_days"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -117,52 +117,6 @@
 
             <TextView
                 android:id="@+id/tv_milk_fat"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="20sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/milk_protein_text"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/tv_milk_protein"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="20sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/lactation_weeks_text"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/tv_lactation_weeks"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
