--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,6 +3,7 @@
     <string-array name="spinner_array">
         <item>粗饲料</item>
         <item>精饲料</item>
+        <item>添加剂</item>
     </string-array>
     <string-array name="variable_array">
         <item>固定</item>
