--- a/app/src/main/res/layout/activity_cow_add.xml
+++ b/app/src/main/res/layout/activity_cow_add.xml
@@ -104,6 +104,27 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:text="@string/milk_week_text"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/et_milk_week"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
                 android:text="@string/milk_fat_text"
                 android:textSize="20sp" />
 
